work in progresss

--- a/csharp.benchmark/ParquetSharp.Benchmark.csproj
+++ b/csharp.benchmark/ParquetSharp.Benchmark.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>ParquetSharp.Benchmark</AssemblyName>
     <RootNamespace>ParquetSharp.Benchmark</RootNamespace>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <StartupObject>ParquetSharp.Benchmark.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
